--- a/index.html
+++ b/index.html
@@ -1,123 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>title</title>
-    <script src="https://unpkg.com/topojson-client@3"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
-    <script src="https://code.highcharts.com/maps/highmaps.js"></script>
-    <script src="https://code.highcharts.com/maps/modules/data.js"></script>
-    <script src="https://code.highcharts.com/maps/modules/data.js"></script>
-    <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
-    <style>
-      #container {
-        height: 500px;
-        min-width: 310px;
-        max-width: 800px;
-        margin: 0 auto;
-      }
-      .loading {
-        margin-top: 10em;
-        text-align: center;
-        color: gray;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- page content -->
-    <div id="container"></div>
-    <script>
-      // Project the data using Proj4
-      function project(geojson, projection) {
-        const projectPolygon = coordinate => {
-          coordinate.forEach((lonLat, i) => {
-            coordinate[i] = window.proj4(projection, lonLat);
-          });
-        };
-        geojson.features.forEach(function (feature) {
-          if (feature.geometry.type === 'Polygon') {
-            feature.geometry.coordinates.forEach(projectPolygon);
-          } else if (feature.geometry.type === 'MultiPolygon') {
-            feature.geometry.coordinates.forEach(items => {
-              items.forEach(projectPolygon);
-            });
-          }
-        });
-      }
+<head>
+  <meta charset="utf-8">
 
-      // Get random data for this sample
-      function getRandomData(geojson) {
-        return geojson.features.map(() => Math.round(Math.random() * 100));
-      }
+  <title>Map demos</title>
+  <meta name="description" content="Interactive Map demos">
+  <meta name="author" content="aspiringguru">
 
-      Highcharts.getJSON(
-        //'https://cdn.jsdelivr.net/gh/highcharts/highcharts@219f5b38b5/samples/data/us-albers.geo.json',
-        'https://code.highcharts.com/mapdata/custom/world-palestine-highres.geo.json',
-        function (topology) {
 
-          // Convert the topoJSON feature into geoJSON
-          const geojson = window.topojson.feature(
-            topology,
-            // For this demo, get the first of the named objects
-            topology.objects[Object.keys(topology.objects)[0]]
-          );
-          const data = getRandomData(geojson);
+</head>
 
-          // Optionally project the data using Proj4. This costs performance, and
-          // when possible, should be done on the server. In this case we're using
-          // a Lambert Conformal Conic projection for the USA, with a projection
-          // center in the middle of the country. A mercator based projection,
-          // like 'EPSG:3857', is faster but is more distorted.
-          project(
-            geojson,
-            '+proj=lcc +lat_1=33 +lat_2=45 +lat_0=39 +lon_0=-96'
-          );
-
-          // Initialize the chart
-          Highcharts.mapChart('container', {
-            chart: {
-              map: geojson
-            },
-
-            title: {
-              text: 'TopoJSON in Highmaps'
-            },
-
-            mapNavigation: {
-              enabled: true,
-              buttonOptions: {
-                verticalAlign: 'bottom'
-              }
-            },
-
-            colorAxis: {
-              tickPixelInterval: 100,
-              minColor: '#F1EEF6',
-              maxColor: '#900037'
-            },
-
-            tooltip: {
-              pointFormat: '{point.properties.name}: {point.value}'
-            },
-
-            series: [{
-              data: data,
-              joinBy: null,
-              name: 'Random data',
-              states: {
-                hover: {
-                  color: '#a4edba'
-                }
-              },
-              dataLabels: {
-                enabled: true,
-                format: '{point.properties.name}'
-              }
-            }]
-          });
-        }
-      );
-    </script>
-  </body>
+<body>
+  <a href="leaflet_demo1/">leaflet_demo1</a>
+</body>
 </html>
