--- a/leaflet_demo1/index.html
+++ b/leaflet_demo1/index.html
@@ -26,7 +26,7 @@
   //https://leafletjs.com/reference-1.6.0.html#zoom/pan-options
 	var map = L.map('map').setView([37.8, -96], 4);
   // openstreetmap.org
-	//L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {attribution: 'OSM'}).addTo(map);
+	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {attribution: 'OSM'}).addTo(map);
 
   //colorbrewer2.org  use this to setup list of colours
   // ['#7f3b08','#b35806','#e08214','#fdb863','#fee0b6','#d8daeb','#b2abd2','#8073ac']
