--- a/leaflet_demo1/index.html
+++ b/leaflet_demo1/index.html
@@ -62,7 +62,48 @@
 	    };
 	}
 
-	L.geoJson(statesData, {style: style}).addTo(map);
+  function highlightFeature(e) {
+    var layer = e.target;
+
+    layer.setStyle({
+        weight: 5,
+        color: '#666',
+        dashArray: '',
+        fillOpacity: 0.7
+    });
+
+    if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+        layer.bringToFront();
+    }
+  }
+
+  function resetHighlight(e) {
+    geojson.resetStyle(e.target);
+  }
+
+  var geojson;
+
+	geojson = L.geoJson(statesData, {style: style}).addTo(map);
+
+  function zoomToFeature(e) {
+    map.fitBounds(e.target.getBounds());
+  }
+
+  function onEachFeature(feature, layer) {
+    layer.on({
+        mouseover: highlightFeature,
+        mouseout: resetHighlight,
+        click: zoomToFeature
+    });
+  }
+
+  geojson = L.geoJson(statesData, {
+      style: style,
+      onEachFeature: onEachFeature
+  }).addTo(map);
+
+
+
 
   console.log("statesData['type']:", statesData['type'])
   console.log("statesData['features']:", statesData['features'])
