--- a/leaflet_demo1/index.html
+++ b/leaflet_demo1/index.html
@@ -12,6 +12,19 @@
 	 		padding: 0;
 	 		margin: 0;
 	 	}
+
+    .info {
+        padding: 6px 8px;
+        font: 14px/16px Arial, Helvetica, sans-serif;
+        background: white;
+        background: rgba(255,255,255,0.8);
+        box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        border-radius: 5px;
+    }
+    .info h4 {
+        margin: 0 0 5px;
+        color: #777;
+    }
 	</style>
 
 </head>
@@ -27,6 +40,25 @@
 	var map = L.map('map').setView([37.8, -96], 4);
   // openstreetmap.org
 	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {attribution: 'OSM'}).addTo(map);
+
+  var info = L.control();
+
+  info.onAdd = function (map) {
+      this._div = L.DomUtil.create('div', 'info'); // create a div with a class "info"
+      this.update();
+      return this._div;
+  };
+
+  // method that we will use to update the control based on feature properties passed
+  info.update = function (props) {
+      this._div.innerHTML = '<h4>US Population Density</h4>' +  (props ?
+          '<b>' + props.name + '</b><br />' + props.density + ' people / mi<sup>2</sup>'
+          : 'Hover over a state');
+  };
+
+  info.addTo(map);
+
+
 
   //colorbrewer2.org  use this to setup list of colours
   // ['#7f3b08','#b35806','#e08214','#fdb863','#fee0b6','#d8daeb','#b2abd2','#8073ac']
@@ -75,10 +107,12 @@
     if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
         layer.bringToFront();
     }
+    info.update(layer.feature.properties);
   }
 
   function resetHighlight(e) {
     geojson.resetStyle(e.target);
+    info.update();
   }
 
   var geojson;
