--- a/leaflet_demo1/index.html
+++ b/leaflet_demo1/index.html
@@ -25,6 +25,18 @@
         margin: 0 0 5px;
         color: #777;
     }
+
+    .legend {
+        line-height: 18px;
+        color: #555;
+    }
+    .legend i {
+        width: 18px;
+        height: 18px;
+        float: left;
+        margin-right: 8px;
+        opacity: 0.7;
+    }
 	</style>
 
 </head>
@@ -136,7 +148,25 @@
       onEachFeature: onEachFeature
   }).addTo(map);
 
+  var legend = L.control({position: 'bottomright'});
 
+  legend.onAdd = function (map) {
+
+      var div = L.DomUtil.create('div', 'info legend'),
+          grades = [0, 10, 20, 50, 100, 200, 500, 1000],
+          labels = [];
+
+      // loop through our density intervals and generate a label with a colored square for each interval
+      for (var i = 0; i < grades.length; i++) {
+          div.innerHTML +=
+              '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
+              grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+      }
+
+      return div;
+  };
+
+  legend.addTo(map);
 
 
   console.log("statesData['type']:", statesData['type'])
