fixed https on osm.org link

--- a/leaflet_demo1/index.html
+++ b/leaflet_demo1/index.html
@@ -51,7 +51,7 @@
   //https://leafletjs.com/reference-1.6.0.html#zoom/pan-options
 	var map = L.map('map').setView([37.8, -96], 4);
   // openstreetmap.org
-	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {attribution: 'OSM'}).addTo(map);
+	L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {attribution: 'OSM'}).addTo(map);
 
   var info = L.control();
 
