--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
-  <a href="leaflet_demo1/">leaflet_demo1</a>
+  <a href="leaflet_demo1/">leaflet_demo1</a><br>
+  <a href="leaflet_geojson_map_au/">leaflet_geojson_map_au</a>
 </body>
 </html>
