--- a/world_map_example/index_d3.html
+++ b/world_map_example/index_d3.html
@@ -8,8 +8,8 @@
 <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
 
 <!-- Create an element where the map will take place -->
-<svg id="my_dataviz" width="400" height="300"></svg>
-
+<!--  <svg id="my_dataviz" width="400" height="300"></svg> -->
+<svg id="my_dataviz" width="1200" height="1200"></svg>
 
 <script>
 
@@ -38,6 +38,9 @@ d3.queue()
   .await(ready);
 
 function ready(error, topo) {
+  console.log("data:", data)
+  console.log("keys:", Object.keys(data))
+  console.log(data.length)
 
   // Draw the map
   svg.append("g")
