--- a/world_map_data+chart/index_dev.html
+++ b/world_map_data+chart/index_dev.html
@@ -6,14 +6,13 @@
 <title>Maps</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/mychart.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
-<link rel="import" href="header.html" />
-<link rel="import" href="footer.html" />
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
@@ -62,6 +61,12 @@
             <h2>COVID data</h2>
         </div>
     </div>
+    <div class="row" width="800" height="600">
+      <h1>Chart1</h1>
+      <div id='chart1'></div>
+    </div>
+
+
     <hr>
     <footer>
         <div class="row">
@@ -77,6 +82,6 @@
     </footer>
 </div>
 <script src="js/get_data_draw_map.js"></script>
-
+<script src="js/d3_chart1.js"></script>
 </body>
 </html>
